Switch command passing to entrypoint arg.

--- a/action.yml
+++ b/action.yml
@@ -22,5 +22,5 @@ runs:
   image: Dockerfile
   build-args: |
     DOCKER_IMAGE=${{ inputs.docker_image }}
-  env:
-    COMMAND: ${{ inputs.command }}
+  args:
+    - ${{ inputs.command }}
