--- a/.github/workflows/release-major-workflow.yaml
+++ b/.github/workflows/release-major-workflow.yaml
@@ -3,7 +3,7 @@ name: Release Major
 on: [workflow_dispatch]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: cliffano/release-action@main
         with:
