--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ branding:
 inputs:
   command:
     description: |
-      Command to be executed via a Docker container
+      Shell command to be executed via a Docker container
     type: string
     required: true
   docker_image:
