--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,6 @@ inputs:
 runs:
   using: docker
   image: Dockerfile
-  build-args: |
-    DOCKER_IMAGE=${{ inputs.docker_image }}
   args:
     - ${{ inputs.command }}
+    - ${{ inputs.docker_image }}
