--- a/action.yml
+++ b/action.yml
@@ -24,8 +24,8 @@ runs:
     - name: Build Docker image
       shell: bash
       run: |
-        docker build -f Dockerfile --build-arg IMAGE=${{ inputs.image }} -t local_image:8.8.8 .
+        docker build -f Dockerfile --build-arg IMAGE=${{ inputs.image }} --build-arg BASE_DIR=$PWD -t local_image:8.8.8 .
     - name: Run Docker container
       shell: bash
       run: |
-        docker run --rm -v "/var/run/docker.sock":"/var/run/docker.sock" -v "${PWD}/entrypoint.sh":/entrypoint.sh --name local_container local_image:8.8.8 "${{ inputs.command }}"
+        docker run --rm -v "/var/run/docker.sock":"/var/run/docker.sock" --name local_container local_image:8.8.8 "${{ inputs.command }}"
