--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,7 @@ runs:
     - name: Build Docker image
       shell: bash
       run: |
-        docker build -f Dockerfile --build-arg IMAGE=${{ inputs.image }} --build-arg BASE_DIR=$PWD -t local_image:8.8.8 .
+        docker build -f Dockerfile --build-arg IMAGE=${{ inputs.image }} --build-arg BASE_DIR="${PWD}" -t local_image:8.8.8 .
     - name: Run Docker container
       shell: bash
       run: |
