--- a/action.yml
+++ b/action.yml
@@ -21,11 +21,10 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - name: Build Docker image
+    - name: Verify
       shell: bash
-      run: |
-        docker build -f Dockerfile --build-arg IMAGE=${{ inputs.image }} -t local_image:8.8.8 .
+      run: ls -al
     - name: Run Docker container
       shell: bash
       run: |
-        docker run --rm -v "/var/run/docker.sock":"/var/run/docker.sock" --name local_container local_image:8.8.8 "${{ inputs.command }}"
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --entrypoint "${{ inputs.command }}" --name local_container "${{ inputs.image }}"
