Add shell to CI tests.

--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -7,17 +7,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: make ci
-      - name: 'Execute cat /etc/*-release via Ubuntu 22.04 Docker container'
+      - name: 'Execute cat /etc/*-release using bash shell via Ubuntu 22.04 Docker container'
         uses: cliffano/command-docker-action@main
         with:
           command: 'cat /etc/*-release'
-          image: 'ubuntu:22.04'
-      - name: 'Execute cat /etc/*-release via default Docker container'
+          image: ubuntu:22.04
+          shell: bash
+      - name: 'Execute cat /etc/*-release using default sh shell via default Docker container'
         uses: cliffano/command-docker-action@main
         with:
           command: 'cat /etc/*-release'
-      - name: 'Execute cat /etc/*-release via Rocky Linux 9.3 Docker container'
+      - name: 'Execute cat /etc/*-release using bash shell via Rocky Linux 9.3 Docker container'
         uses: cliffano/command-docker-action@main
         with:
           command: 'cat /etc/*-release'
-          image: 'rockylinux:9.3'
+          image: rockylinux:9.3
+          shell: bash
