Replace env vars passing support via env_vars arg and dotenv file.

--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -23,3 +23,8 @@ jobs:
           command: 'cat /etc/*-release'
           image: rockylinux:9.3
           shell: bash
+      - name: 'Display environment variables'
+        uses: cliffano/command-docker-action@main
+        with:
+          command: 'echo GITHUB_WORKSPACE: $GITHUB_WORKSPACE, GITHUB_RUN_ID: $GITHUB_RUN_ID'
+          env_vars: 'GITHUB_WORKSPACE,GITHUB_RUN_ID'
