Fix syntax error in CI workflow.

--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -26,7 +26,7 @@ jobs:
       - uses: TickX/var-to-dotenv@v1.1.1
         with:
           key: 'SOME_ENV_VAR'
-          value: 'Some value
+          value: 'Some value'
           envPath: '/tmp/.env'
       - name: 'Display environment variables'
         uses: cliffano/command-docker-action@main
