--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,12 @@ inputs:
     type: string
     required: false
     default: 'sh'
+  path:
+    description: |
+      PATH environment variable to be set during shell command execution
+    type: string
+    required: false
+    default: '/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
   env_file:
     description: |
       Path to env file containing environment variables  made available during shell command execution
@@ -36,7 +42,7 @@ runs:
     - name: Build Docker image on the the GitHub Action directory
       shell: sh
       run: |
-        cd $GITHUB_ACTION_PATH && docker build -f Dockerfile --build-arg IMAGE=${{ inputs.image }} --build-arg SHELL=${{ inputs.shell }} -t local_image:8.8.8 .
+        cd $GITHUB_ACTION_PATH && docker build -f Dockerfile --build-arg IMAGE=${{ inputs.image }} --build-arg PATH=${{ inputs.path }} --build-arg SHELL=${{ inputs.shell }} -t local_image:8.8.8 .
     - name: Run Docker container on the GitHub Workspace directory
       if: inputs.env_file == ''
       shell: sh
