Replace path input with extra_path input due to Dockerfile ENV PATH being overwritten, so we're opting to explicitly set the PATH in entrypoint script with extra PATH being pre-pended to the original PATH.

--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -39,4 +39,4 @@ jobs:
           command: 'echo "$PATH"'
           image: ubuntu:22.04
           shell: bash
-          path: '/some/path:/opt/workspace/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'
+          extra_path: '/some/path:/opt/workspace/bin'
