Missed out extra_path passing when env_file is unspecified.

--- a/action.yml
+++ b/action.yml
@@ -47,7 +47,7 @@ runs:
       if: inputs.env_file == ''
       shell: sh
       run: |
-        cd $GITHUB_WORKSPACE && docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v .:/opt/workspace/ --name local_container local_image:8.8.8 "${{ inputs.command }}"
+        cd $GITHUB_WORKSPACE && docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v .:/opt/workspace/ --name local_container local_image:8.8.8 "${{ inputs.command }}" "${{ inputs.extra_path }}"
     - name: Run Docker container on the GitHub Workspace directory with env file
       if: inputs.env_file != ''
       shell: sh
