Fix escape PATH for in-script evaluation.

--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: 'Display PATH environment variable'
         uses: cliffano/command-docker-action@main
         with:
-          command: "echo ${{ '$PATH' }}"
+          command: 'echo `\$\{\{PATH\}\}`'
           image: ubuntu:22.04
           shell: bash
           extra_path: '/some/path:/opt/workspace/bin'
