--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: 'Display PATH environment variable'
         uses: cliffano/command-docker-action@main
         with:
-          command: "xpath=${{ '\${{PATH}}' }} && echo $xpath'
+          command: "xpath=${{ '\${{PATH}}' }} && echo $xpath"
           image: ubuntu:22.04
           shell: bash
           extra_path: '/some/path:/opt/workspace/bin'
