Switch custom path check to use default image and shell.

--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -33,10 +33,8 @@ jobs:
         with:
           command: 'echo "SOME_ENV_VAR: $SOME_ENV_VAR"'
           env_file: '/tmp/.env'
-      - name: 'Verify extra path is added to original PATH by checking custom command some-exec'
+      - name: 'Run custom command from a custom path specified in extra_path'
         uses: cliffano/command-docker-action@main
         with:
           command: 'mkdir -p /opt/workspace/bin/ && touch /opt/workspace/bin/some-exec && chmod +x /opt/workspace/bin/some-exec && which some-exec'
-          image: ubuntu:22.04
-          shell: bash
           extra_path: '/some/path:/opt/workspace/bin'
